--- a/TestApp.Resource/AppResources.resx
+++ b/TestApp.Resource/AppResources.resx
@@ -117,7 +117,130 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="GetUserListError" xml:space="preserve">
-    <value>Issue while fetching User Details</value>
+  <data name="Action" xml:space="preserve">
+    <value>Action</value>
+  </data>
+  <data name="Activated" xml:space="preserve">
+    <value>Activated</value>
+  </data>
+  <data name="ActivationIssueMessage" xml:space="preserve">
+    <value>Issue while Activating/De-Activating Contact.</value>
+  </data>
+  <data name="Active" xml:space="preserve">
+    <value>Active</value>
+  </data>
+  <data name="AddedIn" xml:space="preserve">
+    <value>Added In</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>Clear</value>
+  </data>
+  <data name="Contact" xml:space="preserve">
+    <value>Contact</value>
+  </data>
+  <data name="ContactActionInvalidMessage" xml:space="preserve">
+    <value>Invalid Contact for Action</value>
+  </data>
+  <data name="ContactActionIssueMessage" xml:space="preserve">
+    <value>Issue while taking action on Contact</value>
+  </data>
+  <data name="ContactDeleteFailMessage" xml:space="preserve">
+    <value>Issue while deleting contact details</value>
+  </data>
+  <data name="ContactDeleteSuccessMessage" xml:space="preserve">
+    <value>Contact deleted successfully</value>
+  </data>
+  <data name="ContactExistMessage" xml:space="preserve">
+    <value>Contact Already Exist</value>
+  </data>
+  <data name="ContactListFetchIssueMessage" xml:space="preserve">
+    <value>Issue while fetching contact details</value>
+  </data>
+  <data name="ContactListFetchSuccessMessage" xml:space="preserve">
+    <value>Contact details fetched successfully</value>
+  </data>
+  <data name="ContactManagement" xml:space="preserve">
+    <value>Contact Management</value>
+  </data>
+  <data name="ContactNumber" xml:space="preserve">
+    <value>Contact Number</value>
+  </data>
+  <data name="ContactSaveIssueMessage" xml:space="preserve">
+    <value>Issue while Adding Contact Details</value>
+  </data>
+  <data name="ContactSaveSuccessMessage" xml:space="preserve">
+    <value>Contact Details saved successfully</value>
+  </data>
+  <data name="DeActivated" xml:space="preserve">
+    <value>De-activated</value>
+  </data>
+  <data name="DELETE" xml:space="preserve">
+    <value>DELETE</value>
+  </data>
+  <data name="EDIT" xml:space="preserve">
+    <value>EDIT</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="EmailExistMessage" xml:space="preserve">
+    <value>EmailId Already Exist</value>
+  </data>
+  <data name="Favourite" xml:space="preserve">
+    <value>Favourite</value>
+  </data>
+  <data name="FavouriteList" xml:space="preserve">
+    <value>Favourite List</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="InvalidContactDetailMessage" xml:space="preserve">
+    <value>Invalid Contact Details</value>
+  </data>
+  <data name="InvalidContactMessage" xml:space="preserve">
+    <value>Invalid Contact for Activation/De-activation</value>
+  </data>
+  <data name="InvalidContactSelected" xml:space="preserve">
+    <value>Invalid Contact selected</value>
+  </data>
+  <data name="InvalidMobileNumber" xml:space="preserve">
+    <value>Invalid mobile number</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="MobileNoExistMessage" xml:space="preserve">
+    <value>MobileNo Already Exist</value>
+  </data>
+  <data name="MobileNumber" xml:space="preserve">
+    <value>Mobile Number</value>
+  </data>
+  <data name="NoContactSelected" xml:space="preserve">
+    <value>No Contact Selected</value>
+  </data>
+  <data name="NoDataFound" xml:space="preserve">
+    <value>No Data Found</value>
+  </data>
+  <data name="RemovedFrom" xml:space="preserve">
+    <value>Removed From</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="SearchBy" xml:space="preserve">
+    <value>Search by Contact no, First Name or Last Name</value>
+  </data>
+  <data name="SomethingWentWrongMessage" xml:space="preserve">
+    <value>Something Went Wrong</value>
+  </data>
+  <data name="Submit" xml:space="preserve">
+    <value>Submit</value>
+  </data>
+  <data name="Successfully" xml:space="preserve">
+    <value>Successfully</value>
+  </data>
+  <data name="TotalContacts" xml:space="preserve">
+    <value>Total Contacts</value>
   </data>
 </root>
